--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<title>Notes</title>
-		<link data-trunk rel="sass" href="styles.scss" />
-
-		<link data-trunk rel="rust" />
+		<title>receipts</title>
+		<script type="module" src="/index.js"></script>
+		<link type="text/css" rel="stylesheet" href="/index.css" />
 	</head>
-	<body></body>
+	<body>
+		<input type="text" id="query" name="search">
+	</body>
 </html>
-
