--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 	<head>
 		<title>receipts</title>
-		<script type="module" src="/index.js"></script>
-		<link type="text/css" rel="stylesheet" href="/index.css" />
+		<link type="text/css" rel="stylesheet" href="index.css" />
 	</head>
 	<body>
-		<input type="text" id="query" name="search">
+		<input type="text" id="query" />
+
+		<script src="index.js"></script>
 	</body>
 </html>
