feat: closer to mvp and added cicd script

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,21 +3,48 @@
 	<head>
 		<link data-trunk rel="rust" data-wasm-opt="z"/>
 
+		<!-- #2E303E  rgb(97, 140, 123) -->
 		<style>
 			body {
-				background: #2E303E;
+				background: #0f172a;
 				color: #FFFFFF;
 			}
 
 			h1 {
-				color: #8488A0;
+				color: rgb(56, 189, 248);
 			}
 
 			.area {
-				background: #4051B5;
+				color: #FFFFFF;
 				display: flex;
 				justify-content: center;
 				align-items: center;
+			}
+
+			.input {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+
+			.recipes {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+
+			.recipe h2 {
+				color: #FFFFFF;
+			}
+
+			.recipe {
+				padding: 20px;
+				display: block;
+				box-sizing: content-box;
+				line-height: 16px;
+				margin: 10px;
+				border: solid #1e293b 1px;
+				color: rgb(148, 163, 184);
 			}
 		</style>
 		<!-- <link data-trunk rel="icon" type="image/ico" href="/public/favicon.ico"/> -->
