feat: trying pictures

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,7 +44,9 @@
 				line-height: 16px;
 				margin: 10px;
 				border: solid #1e293b 1px;
+				min-width: 500px;
 				color: rgb(148, 163, 184);
+				text-align: center;
 			}
 		</style>
 		<!-- <link data-trunk rel="icon" type="image/ico" href="/public/favicon.ico"/> -->
