--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,16 +20,34 @@
 			}
 
 			.header {
+                font-size: 150%;
+                background: None;
+                text-align: center;
 				grid-column-start: 1;
 				grid-column-end: 5;
 				border-style: solid;
 			}
 
 			.recipes {
+                font-size: 100%;
+                background: None;
+                text-align: center;
+                color: rgb(166, 172, 205);
 				grid-column-start: 1;
 				grid-column-end: 4;
+                border-color: black;
 				border-style: solid;
 			}
+
+            body {
+                background: #292D3E;
+            }
+
+            span {
+                font-size: 300%;
+                background: None;
+            }
+
 		</style>
 		<!-- <link data-trunk rel="icon" type="image/ico" href="/public/favicon.ico"/> -->
 	</head>
